--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/giovanniamorimprof/apw#readme",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3"
   }
 }
